<resources>
    <string name="app_name">StreamFlux</string>
    <string name="made_with_in">Made With ❤ in Sri Lanka</string>
    <string name="categories">Categories</string>
    <string name="expiration">Expiration :</string>
    <string name="logged_in">Logged in :</string>
    <string name="live_tv_home">LIVE TV</string>
    <string name="movies_home">MOVIES</string>
    <string name="live_with_epg_home">LIVE WITH EPG</string>
    <string name="catch_up_home">CATCH UP</string>
    <string name="series_home">SERIES</string>
    <string name="multiple_screen">MULTISCREEN</string>
    <string name="favourite">Favourite</string>
    <string name="recently">Recently Watched</string>
    <string name="recently_add">Recently added</string>
    <string name="search_categories">Search Categories</string>
    <string name="login_with_xtream_codes">XTREAM CODES</string>
    <string name="play_single_stream">PLAY SINGLE STREAM</string>
    <string name="list_users">LIST USERS</string>
    <string name="login_with_device_id">LOGIN WITH DEVICE ID</string>
    <string name="login_with_activation_code">LOGIN WITH ACTIVATION CODE</string>
    <string name="m3u_playlist">M3U PLAYLIST</string>
    <string name="_1_stream">1-STREAM</string>
    <string name="by_using_this_application">By using this application, you agree to agree to the</string>
    <string name="_downloads">DOWNLOADS</string>
    <string name="_local_storage">LOCAL STORAGE</string>
    <string name="exit">Exit</string>
    <string name="cancel">Cancel</string>
    <string name="sure_exit">Are you sure you want to exit app?</string>
    <string name="upgrade">Upgrade</string>
    <string name="its_time_to_upgrade">Its time to Upgrade to the latest version of our application to get the best experience.</string>
    <string name="do_it_now">DO IT NOW</string>
    <string name="maintenance">Maintenance</string>
    <string name="temporarily_down_for_maintenance">Temporarily Down for Maintenance</string>
    <string name="we_are_performing_scheduled">we are performing scheduled maintenance. we should be back online shortly.</string>
    <string name="try_again_later">Try again later</string>
    <string name="sniffing_detected">Sniffing Detected</string>
    <string name="turn_off_all_sniffers_tools">Turn off all sniffers Tools and Vpn tools to access app</string>
    <string name="developer_mode">Developer Mode</string>
    <string name="turn_off_developer_mode">Turn off Developer Mode to access the app</string>
    <string name="sure_delete">Are you sure you want to delete this?</string>
    <string name="unlock">Unlock</string>
    <string name="channels">Channels</string>
    <string name="aspect_ratio">Aspect Ratio</string>
    <string name="now_playing">Now Playing</string>
    <string name="lock_player">Lock player</string>
    <string name="player_locked">Player locked</string>
    <string name="tap_to_unlock">Tap unlock icon to resume</string>
    <string name="parental_control">Parental Control</string>
    <string name="warning_adults_only">Warning Adults Only</string>
    <string name="select_recently_limit">Select Recently Limit</string>
    <string name="live_not_downloaded">Live TV Not Downloaded</string>
    <string name="want_to_download">You need to download live tv in order to use this feature. Do you want to download now?</string>
    <string name="select_reload_hours">Select auto reload hours</string>
    <string name="select_blur_radius">Select Blur Radius</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name="sure_logout">Are you sure you want to logout?</string>
    <string name="reload_data">Reload Data</string>
    <string name="sure_reload_data">Are you sure you want to Reload Data?</string>
    <string name="audio_tracks">Audio Tracks</string>
    <string name="video_tracks">Video Tracks</string>
    <string name="filter_remove">Filter remove</string>
    <string name="apply_filter">Apply Filter</string>
    <string name="err_pass_end_space">Please do not add space at end</string>
    <string name="err_cannot_empty">Field cannot be empty</string>
    <string name="err_internet_not_connected">Please connect to internet</string>
    <string name="err_connect_net_try">Please connect to internet and try again</string>
    <string name="err_unauthorized_access">Unauthorized Access</string>
    <string name="retry">Retry</string>
    <string name="err_server_not_connected">Server not connected</string>
    <string name="err_login_not_incorrect">Login details are incorrect</string>
    <string name="err_activation_code_incorrect">Activation code are incorrect</string>
    <string name="err_server_error">Server Error</string>
    <string name="err_playback_failed">Playback failed. Please try again.</string>
    <string name="logout_success">Logout Successful</string>
    <string name="added_success">Added successfully.</string>
    <string name="err_no_data_found">No Data Found</string>
    <string name="err_no_episodes_found">No Episodes Found</string>
    <string name="fav_success">Added to Favourite</string>
    <string name="fav_remove_success">Removed from Favourite</string>
    <string name="play">PLAY</string>
    <string name="resume">RESUME</string>
    <string name="trailer">TRAILER</string>
    <string name="err_password">password incorrect. please try again.</string>
    <string name="error_old_password">Please Enter Old Password</string>
    <string name="error_password">Please Enter Password</string>
    <string name="error_cpassword">Please Enter Confirm Password</string>
    <string name="error_pass_not_match">Confirm Password not matched</string>
    <string name="error_old_pass_not_match">Old Password not matched</string>
    <string name="error_pass_end_space">Please do not add space at end</string>
    <string name="error_category_list">Unfortunately, there is no content under this category list</string>
    <string name="please_wait_a_minute">Please wait a minute</string>
    <string name="logout">Logout</string>
    <string name="encrypted_data_security">End-to-End Encrypted Data Security</string>
    <string name="last_updated">Last updated:</string>
    <string name="search">Search</string>
    <string name="getting_your_profile_ready">Getting your profile ready…</string>
    <string name="welcome">Welcome</string>
    <string name="list_success">Added to Filter List</string>
    <string name="list_remove_success">Removed from Filter List</string>
    <string name="card_holder_name">Card Holder name</string>
    <string name="xxxxxxxxx">xxxxxxxxx</string>
    <string name="expiry_date">Expiry date</string>
    <string name="xxxx_xx_xx">xxxx-xx-xx</string>
    <string name="subscription_info">Subscription info</string>
    <string name="card_connections">Connections</string>
    <string name="add_account">Add account</string>
    <string name="enter_login_details">Enter Your Login Details</string>
    <string name="any_name">Any name</string>
    <string name="user_name">User name</string>
    <string name="user_password">Password</string>
    <string name="url_here_com_port">http://url_here.com:port</string>
    <string name="user_list_any_name">nemosofts</string>
    <string name="user_list_user_name">Username: </string>
    <string name="user_list_url">URL: </string>
    <string name="login">LOGIN</string>
    <string name="settings">Settings</string>
    <string name="theme_classic">Classic</string>
    <string name="theme_dark_grey">Dark Grey</string>
    <string name="theme_dark_blue">Dark Blue</string>
    <string name="theme_dark">Dark</string>
    <string name="notifications">Notifications</string>
    <string name="wifi_setting">Wifi Setting</string>
    <string name="date_time">Date and time</string>
    <string name="profile">Profile</string>
    <string name="stream_format">Stream Format</string>
    <string name="speed_test">Speed test</string>
    <string name="speed_download_label">Download: %1$s</string>
    <string name="speed_upload_label">Upload: %1$s</string>
    <string name="speed_average_label">Average: %1$s</string>
    <string name="speed_summary_template">%1$s\n%2$s</string>
    <string name="speed_test_in_progress">Speed test already running</string>
    <string name="show_multi_screen_popup">Show Multi-Screen Popup</string>
    <string name="choose_multi_screen_layout">Choose Multi-Screen Layout</string>
    <string name="multi_screen_settings">Multi-Screen Settings</string>
    <string name="general_setting">General Setting</string>
    <string name="ui_setting">UI Setting</string>
    <string name="autoplay_next_episode">Autoplay Next Episode</string>
    <string name="categories_reverse_order">Categories List in Reverse Order</string>
    <string name="recently_added_limit_movie_series">Recently Added Limit (Movie, Series)</string>
    <string name="recently_added_limit_live_tv">Recently Added Limit (Live TV)</string>
    <string name="set_playlist_agent">Set Playlist Agent</string>
    <string name="post_notification">Notification Setting</string>
    <string name="auto_reload_data">Auto-Update Live, Movies and Series After Every</string>
    <string name="auto_update_live">Auto-Update Live</string>
    <string name="auto_update_movies">Auto-Update Movies</string>
    <string name="auto_update_series">Auto-Update Series</string>
    <string name="splash_screen_music">Splash Screen Music</string>
    <string name="automation">Automation</string>
    <string name="time_format">Time Format</string>
    <string name="save">SAVE</string>
    <string name="ui">UI</string>
    <string name="snow_fall_effect">Snow Fall Effect Home Page</string>
    <string name="select">SELECT</string>
    <string name="show_movie_series_name">Show Movie/ Series Name</string>
    <string name="show_movie_cast_details">Show Movie Cast Details</string>
    <string name="show_download_button">Show Download Button</string>
    <string name="player_ui">Player UI</string>
    <string name="show_subtitle_button">Show Subtitle Button</string>
    <string name="show_vr_button">Show VR Button</string>
    <string name="shimmering_effect">Shimmering Effect</string>
    <string name="home_page">Home Page</string>
    <string name="feedback">Feedback</string>
    <string name="please_describe_the_problem">Please describe the problem…</string>
    <string name="submit">Submit</string>
    <string name="todo">TODO</string>
    <string name="openvpn_help_title">VPN Help</string>
    <string name="openvpn_help_intro">Follow these steps to set up a secure connection using your .ovpn configuration file or a remote URL.</string>
    <string name="openvpn_help_section_import">1. Import your configuration</string>
    <string name="openvpn_help_section_import_body">Select FILE to browse for a .ovpn profile on your device or choose URL to download it from a remote server. Make sure the file comes from a trusted source.</string>
    <string name="openvpn_help_section_connect">2. Provide credentials and connect</string>
    <string name="openvpn_help_section_connect_body">Enter the VPN username and password supplied by your provider, then tap CONNECT. The profile is handed off to the OpenVPN Connect app to complete the connection.</string>
    <string name="openvpn_help_section_profiles">3. Manage saved profiles</string>
    <string name="openvpn_help_section_profiles_body">Every successful connection is stored under VPN Profiles so you can reconnect later with one click or delete entries you no longer need.</string>
    <string name="openvpn_help_section_tips">Tips</string>
    <string name="openvpn_help_section_tips_body">Keep your credentials private, verify URLs before downloading configs, and ensure OpenVPN Connect stays updated for the best compatibility.</string>
    <string name="openvpn_help_open_setup">Open VPN Setup</string>
    <string name="openvpn_help_get_app">Install OpenVPN App</string>
</resources>