<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/theme_bg"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_dark">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/_5sdp"
        android:paddingStart="@dimen/_25sdp"
        android:paddingEnd="@dimen/_25sdp">

        <LinearLayout
            android:id="@+id/ll_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:gravity="center"
            android:orientation="horizontal">

            <androidx.nemosofts.material.ImageViewRound
                android:layout_width="@dimen/_30sdp"
                android:layout_height="@dimen/_30sdp"
                android:src="@drawable/logo"
                android:contentDescription="@string/todo"
                app:irv_corner_radius="@dimen/_4sdp" />

            <TextView
                android:id="@+id/tv_help_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10sdp"
                android:text="@string/openvpn_help_title"
                android:textColor="@color/white"
                android:textSize="@dimen/_14ssp"
                android:textStyle="bold" />

        </LinearLayout>

        <ScrollView
            android:id="@+id/sv_help_body"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/ll_help_actions"
            android:layout_below="@id/ll_header"
            android:layout_marginTop="@dimen/_15sdp"
            android:background="@drawable/bg_card_sub"
            android:backgroundTint="?nsTitle"
            android:padding="@dimen/_15sdp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/openvpn_help_intro"
                    android:textColor="?nsTitleSub"
                    android:textSize="@dimen/_11ssp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_12sdp"
                    android:text="@string/openvpn_help_section_import"
                    android:textColor="?nsWhite"
                    android:textSize="@dimen/_11ssp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_4sdp"
                    android:text="@string/openvpn_help_section_import_body"
                    android:textColor="?nsTitleSub"
                    android:textSize="@dimen/_10ssp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_12sdp"
                    android:text="@string/openvpn_help_section_connect"
                    android:textColor="?nsWhite"
                    android:textSize="@dimen/_11ssp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_4sdp"
                    android:text="@string/openvpn_help_section_connect_body"
                    android:textColor="?nsTitleSub"
                    android:textSize="@dimen/_10ssp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_12sdp"
                    android:text="@string/openvpn_help_section_profiles"
                    android:textColor="?nsWhite"
                    android:textSize="@dimen/_11ssp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_4sdp"
                    android:text="@string/openvpn_help_section_profiles_body"
                    android:textColor="?nsTitleSub"
                    android:textSize="@dimen/_10ssp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_12sdp"
                    android:text="@string/openvpn_help_section_tips"
                    android:textColor="?nsWhite"
                    android:textSize="@dimen/_11ssp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_4sdp"
                    android:text="@string/openvpn_help_section_tips_body"
                    android:textColor="?nsTitleSub"
                    android:textSize="@dimen/_10ssp" />

            </LinearLayout>
        </ScrollView>

        <LinearLayout
            android:id="@+id/ll_help_actions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingTop="@dimen/_10sdp">

            <androidx.nemosofts.material.IconTextView
                android:id="@+id/btn_openvpn_help_open_setup"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_6sdp"
                android:layout_weight="1"
                android:background="@drawable/focused_btn_ui_selector"
                android:focusable="true"
                android:focusableInTouchMode="false"
                android:gravity="center"
                android:padding="@dimen/_8sdp"
                android:text="@string/openvpn_help_open_setup"
                android:textColor="?nsBlack"
                android:textSize="@dimen/_11ssp"
                android:textStyle="bold"
                app:icon="@drawable/ic_vpn"
                app:iconColor="@color/black"
                app:iconPadding="@dimen/_4sdp"
                app:iconPosition="start"
                app:iconSize="@dimen/_18sdp" />

            <androidx.nemosofts.material.IconTextView
                android:id="@+id/btn_openvpn_help_get_app"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/focused_btn_ui_selector"
                android:focusable="true"
                android:focusableInTouchMode="false"
                android:gravity="center"
                android:padding="@dimen/_8sdp"
                android:lines="1"
                android:text="@string/openvpn_help_get_app"
                android:textColor="?nsBlack"
                android:textSize="@dimen/_11ssp"
                android:textStyle="bold"
                app:icon="@drawable/ic_information"
                app:iconColor="@color/black"
                app:iconPadding="@dimen/_4sdp"
                app:iconPosition="start"
                app:iconSize="@dimen/_18sdp" />

        </LinearLayout>

    </RelativeLayout>

</RelativeLayout>
