<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/_25sdp">

    <LinearLayout
        android:layout_width="@dimen/_280sdp"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:background="@drawable/bg_dialog"
        android:orientation="vertical"
        android:padding="@dimen/_5sdp"
        tools:ignore="UselessParent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="@dimen/_1sdp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="@dimen/_35sdp"
                android:layout_height="@dimen/_35sdp"
                android:contentDescription="@string/todo"
                android:padding="@dimen/_5sdp"
                android:src="@drawable/ic_feedback"
                app:tint="?nsWhite"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="@dimen/_9sdp"
                android:text="@string/feedback"
                android:textColor="?nsTitle"
                android:textSize="@dimen/_13ssp"
                android:textStyle="bold"/>

            <ImageView
                android:id="@+id/iv_close"
                android:layout_width="@dimen/_35sdp"
                android:layout_height="@dimen/_35sdp"
                android:background="@drawable/focused_icon_selector"
                android:contentDescription="@string/todo"
                android:focusable="true"
                android:focusableInTouchMode="false"
                android:padding="@dimen/_5sdp"
                android:src="@drawable/ic_close"
                app:tint="?nsWhite"/>

        </LinearLayout>

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/et_messages"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_5sdp"
            android:background="@drawable/focused_ed_dialog"
            android:gravity="top"
            android:hint="@string/please_describe_the_problem"
            android:maxLines="10"
            android:minLines="4"
            android:padding="12dp"
            android:textColor="?nsTitle"
            android:textColorHint="?nsTitleSub"
            android:textSize="@dimen/_12ssp"
            android:imeOptions="flagNoFullscreen"
            tools:ignore="Autofill,TextFields"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="@dimen/_10sdp">

            <TextView
                android:id="@+id/tv_cancel"
                android:layout_width="0dp"
                android:layout_height="@dimen/_30sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:layout_weight="1"
                android:background="@drawable/focused_btn_danger"
                android:focusable="true"
                android:focusableInTouchMode="false"
                android:gravity="center"
                android:text="@string/cancel"
                android:textColor="@color/white"
                android:textSize="@dimen/_13ssp"/>

            <TextView
                android:id="@+id/tv_submit"
                android:layout_width="0dp"
                android:layout_height="@dimen/_30sdp"
                android:layout_weight="1"
                android:background="@drawable/focused_btn_primary"
                android:focusable="true"
                android:focusableInTouchMode="false"
                android:gravity="center"
                android:text="@string/submit"
                android:textColor="@color/white"
                android:textSize="@dimen/_13ssp"/>

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>