<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="@dimen/_50sdp"
    android:padding="@dimen/_5sdp"
    android:layout_margin="@dimen/_5sdp"
    android:orientation="horizontal"
    android:focusable="true"
    android:focusableInTouchMode="false"
    android:background="@drawable/focused_bg_card_selector"
    android:id="@+id/ll_single_list">

    <RelativeLayout
        android:layout_width="@dimen/_40sdp"
        android:layout_height="match_parent">

        <androidx.nemosofts.material.ImageViewRound
            android:id="@+id/iv_color_bg"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:irv_border_color="@color/md_border"
            android:src="@color/color_setting_1"
            app:irv_border_width="@dimen/_1sdp"
            app:irv_corner_radius="@dimen/_5sdp"/>

        <ImageView
            android:layout_margin="@dimen/_5sdp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/ic_play"
            app:tint="@color/white"
            android:contentDescription="@string/todo" />

    </RelativeLayout>

    <LinearLayout
        android:layout_marginStart="@dimen/_5sdp"
        android:layout_marginEnd="@dimen/_5sdp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">

        <TextView
            android:id="@+id/tv_any_name"
            android:text="@string/user_list_any_name"
            android:textStyle="bold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/md_title"
            android:maxLines="2"
            android:textSize="@dimen/_10ssp"/>

        <TextView
            android:layout_marginTop="@dimen/_10sdp"
            android:id="@+id/tv_video_url"
            android:text="@string/user_list_url"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/md_title_sub"
            android:textSize="@dimen/_8ssp"
            android:lines="1"/>

    </LinearLayout>

</LinearLayout>